# decision-tree

./: .gitignore  CMakeLists.txt  CSVReader.cpp  CSVReader.hpp  DecisionTree.cpp  DecisionTree.hpp  Example.cpp  Main.cpp  Node.cpp  Node.hpp  NodeUtility.hpp  README.md  Utilities.hpp  decision_tree.py
.github/workflows/: release.yml
notebooks/: titanic_predictions.ipynb
presentations/: PythonMeetup.md
test/: CMakeLists.txt  CSVReaderTests.cpp  DecisionTreeTests.cpp  NodeTests.cpp  NodeUtilityTests.cpp  UtilitiesTests.cpp
test/resources/: bigTest.csv  bigTrain.csv  test.csv  titanicTest.csv  titanicTrain.csv  train.csv
